feat: update README to reflect support for PNG files and enhance user flow details